--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "apexcharts": "^4.5.0",
         "tailwindcss-animate": "^1.0.7"
     }
 }
